--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,7 +1,6 @@
 {
   "name": "mobile",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -22,13 +21,17 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-device-info": "^10.2.0",
     "react-native-dotenv": "^3.3.1",
+    "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-permissions": "^3.6.1",
     "react-native-reanimated": "~2.3.1",
     "react-native-svg": "12.1.1",
     "react-native-view-shot": "3.1.2",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "expo-splash-screen": "~0.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
